# python-sdk

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: shared.yml
api/: index.html
examples/agents/: README.md
examples/agents/chat-cli/: pyproject.toml
examples/agents/chat-cli/mcp_chat_cli/: cli.py  servers_config.json
examples/agents/personal-assistant/: pyproject.toml
examples/agents/personal-assistant/mcp_personal_assistant/: server.py  servers_config.json
examples/agents/project-analyst/: pyproject.toml
examples/agents/project-analyst/mcp_project_analyst/: __init__.py  mock_data.py  server.py
examples/clients/simple-auth-client/mcp_simple_auth_client/: main.py
examples/clients/simple-chatbot/mcp_simple_chatbot/: main.py
examples/fastmcp/: icons_demo.py  simple_echo.py
examples/servers/simple-auth/: README.md
examples/servers/simple-auth/mcp_simple_auth/: __init__.py  __main__.py  auth_server.py  github_oauth_provider.py  legacy_as_server.py  server.py  token_verifier.py
examples/servers/simple-pagination/mcp_simple_pagination/: server.py
examples/servers/simple-prompt/mcp_simple_prompt/: server.py
examples/servers/simple-resource/mcp_simple_resource/: server.py
examples/servers/simple-tool/mcp_simple_tool/: server.py
examples/snippets/clients/: oauth_client.py  streamable_basic.py
examples/snippets/servers/: pagination_example.py
examples/snippets/servers/lowlevel/: basic.py  lifespan.py  structured_output.py
scripts/: test
search/: search_index.json
src/mcp/: types.py
src/mcp/client/: __main__.py  auth.py  session.py  session_group.py  sse.py  streamable_http.py
src/mcp/client/auth/: oauth.py
src/mcp/client/stdio/: __init__.py
src/mcp/server/: session.py  sse.py  streaming_asgi_transport.py
src/mcp/shared/: auth.py  memory.py  session.py
tests/: test_examples.py
tests/client/: test_auth.py  test_http_unicode.py  test_oauth.py  test_session_group.py  test_sse_unicode.py  test_stdio.py
tests/issues/: test_1338_icons_and_metadata.py  test_1356_sse_parsing_line_separator.py  test_1358_client_connection_error_handling.py  test_188_concurrency.py
tests/server/: test_sse_security.py
tests/server/fastmcp/: test_func_metadata.py  test_integration.py  test_stdio_elicitation.py
tests/server/lowlevel/: test_advanced_type_inspection.py  test_deprecation_warnings.py  test_func_inspection.py  test_server_listing.py  test_server_pagination.py  test_type_accepts_request.py
tests/shared/: test_sse.py  test_streamable_http.py
(+31 files in other folders)
