[project]
name = "mcp-project-analyst"
version = "0.1.0"
description = "Project Analyst Agent using MCP"
requires-python = ">=3.10"
authors = [{ name = "Anthropic, PBC." }]
keywords = ["mcp", "llm", "automation", "project", "analysis"]
license = { text = "MIT" }
dependencies = ["anyio>=4.5", "httpx>=0.27", "mcp"]

[project.scripts]
mcp-project-analyst = "mcp_project_analyst.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_project_analyst"]

[tool.pyright]
include = ["mcp_project_analyst"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]